--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -6,12 +6,20 @@
 		margin-right:-65px;
 	}
 
+	&--gutters-large{
+		margin-right:-100px;
+	}
+
 	&__b-margin-until-medium{
 		margin-bottom:1rem;
 	}
 
 	&--gutters > div {
 		padding-right:65px;
+	}
+
+	&--gutters-large > div {
+		padding-right:100px;
 	}
 
 	@mixin atMedium{
@@ -36,5 +44,10 @@
 		&__medium-8--smaller{
 			width:63%;
 		}	
+
+		&__medium-6{
+			float:left;
+			width:50%;
+		}
 	}
 }
