finished the testimonial section

--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -23,6 +23,11 @@
 			margin-left:0;
 			display:inline-block;
 			margin-bottom:0;
+			position:relative;
+			top:8px;
 		}
+	}
+	&--blue{
+		color:$mainBlue;
 	}
 }
