--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -10,6 +10,10 @@
 		margin-right:-100px;
 	}
 
+	&--gutters-small{
+		margin-right: -45px;
+	}
+
 	&__b-margin-until-medium{
 		margin-bottom:1rem;
 	}
@@ -20,6 +24,48 @@
 
 	&--gutters-large > div {
 		padding-right:100px;
+	}
+
+	&--gutters-small > div{
+		padding-right: 45px;
+	}
+
+	&--t-padding{
+		padding-top:80px;
+	}
+
+	@mixin atLarge{
+		&__b-margin-until-large{
+			margin-bottom:0;
+		}
+
+		&__large-4{
+			float:left;
+			width: 33.33%;
+		}
+
+		&__large-4--larger{
+			width:37%;
+	  }
+
+		&__large-8{
+			float:left;
+			width:66.66%;
+		}		
+
+		&__large-8--smaller{
+			width:63%;
+		}	
+
+		&__large-6{
+			float:left;
+			width:50%;
+		}
+
+		&__large-4{
+			float:left;
+			width:33%;
+		}
 	}
 
 	@mixin atMedium{
@@ -48,6 +94,34 @@
 		&__medium-6{
 			float:left;
 			width:50%;
+		}
+
+		&__medium-4{
+			float:left;
+			width:33%;
+		}
+	}
+
+	/*Begin Equal Height Rules */
+	&--equal-height-at-medium{
+		@mixin atMedium{
+			display:flex;
+		}
+
+		& > div {
+			float:none;
+			display:flex;
+		}
+	}
+
+	&--equal-height-at-large{
+		@mixin atLarge{
+			display:flex;
+		}
+
+		& > div {
+			float:none;
+			display:flex;
 		}
 	}
 }
