--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,3 +11,5 @@
 @import "modules/_generic-content-container";
 @import "modules/_section-title.css";
 @import "modules/_feature-item.css";
+@import "modules/_testimonial.css";
+
