--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,4 +1,9 @@
 .primary-nav{
+	padding-top:10px;
+
+	@mixin atMedium{
+		padding-top:0;
+	}
 
 	ul{
 		margin:0;
@@ -8,20 +13,44 @@
 
 	li{
 		list-style:none;
-		float:left;
-		padding-right:20px;
+		padding-right:7px;
+		display:inline-block;
+
+		@mixin atMedium{
+			float:left;
+			display:block;
+			padding-right:20px;
+		}
+	}
+
+	li:last-child{
+		padding-right:0;
+		@mixin atMedium{
+			padding-right:20px;
+		}
 	}
 
 	a{
 		text-decoration: none;
 		color:#fff;
 		font-weight:300;
-		padding:12px 0;
+		padding:5px 8px;
 		display:block;
+		font-size:.8rem;
+		background-color:rgba(47,85,114, .5);
+
+		@mixin atMedium{
+			padding:12px 0;
+			font-size:1rem;
+			background-color:transparent;
+
+		}
 	}
 
 
 	&--pull-right{
-		float:right;
+		@mixin atMedium{
+			float:right;
+		}
 	}
 }
