--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -15,6 +15,8 @@
 @import "modules/_sprite.css";
 @import "modules/_site-header.css";
 @import "modules/_primary-nav.css";
+@import "modules/_reveal-item.css";
+
 
 
 
